--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-242.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇸🇬 新加坡-1.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-325.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇦 加拿大-253.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-523.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-728.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-677.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-397.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-403.8KB/s(Youtube:不良林), server: 134.195.196.89, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-626.1KB/s(Youtube:不良林), server: 134.195.196.89, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 134.195.196.89, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇮🇹 意大利-349.2KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇯🇵 日本-408.4KB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-513.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-244.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 185.160.26.35, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 185.160.26.35, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-508.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-242.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-253.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-677.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-403.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-626.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-349.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-408.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-513.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-508.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-242.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-253.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-677.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-403.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-626.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-349.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-408.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-513.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-508.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-242.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-253.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-677.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-403.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-626.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-349.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-408.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-513.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-508.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-242.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-253.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-677.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-403.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-626.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-349.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-408.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-513.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-508.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-242.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-253.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-677.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-403.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-626.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-349.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-408.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-513.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-508.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-242.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-253.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-677.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-403.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-626.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-349.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-408.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-513.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-508.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-242.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-253.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-677.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-403.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-626.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-349.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-408.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-513.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-508.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
