--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-218.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-668.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-714.9KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-935.7KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇯🇵 日本-295.2KB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-607.8KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-236.7KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇫🇷 法国-284.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-417.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-386.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 185.160.26.35, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-302.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-201.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-566.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-231.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-499.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-524.1KB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-794.2KB/s(Youtube:不良林), server: 134.195.196.89, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 134.195.196.89, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-668.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-714.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-935.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-295.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-668.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-714.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-935.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-295.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-668.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-714.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-935.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-295.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-668.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-714.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-935.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-295.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-668.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-714.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-935.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-295.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-668.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-714.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-935.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-295.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-668.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-714.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-935.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-295.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
