--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 185.160.26.35, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-302.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-201.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-566.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-231.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-499.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-607.8KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-524.1KB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-794.2KB/s(Youtube:不良林), server: 134.195.196.89, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 134.195.196.89, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-221.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-536.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-417.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-517.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-206.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-968.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-316.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-755.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-316.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-316.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-316.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-316.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-316.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-316.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-201.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-524.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-794.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-417.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-316.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
